# RFInject

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
data/: README.md
docs/: Abstract.txt  Authors.txt  Links.json  README.md  Title.txt  index.html  method.txt  results.txt  style.css
examples/: README.md
notebooks/: README.md  example_analysis.ipynb
papers/: README.md
pyscripts/: README.md  download_hf_datasets.py  example_script.py  process_data.py
scripts/: README.md  build.sh  cleanup.sh  download_data.sh  setup.sh
src/your_package/: README.md  __init__.py  example.py
tests/: README.md  test_example.py
