[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your_package_name" # Replace with your package name
version = "0.0.1"
authors = [
  { name="Author One", email="author.one@example.com" }, # Replace with actual author details
  { name="Author Two", email="author.two@example.com" }, # Add more authors as needed
]
description = "A short description of the project." # Replace with your project description
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your project dependencies here, e.g.:
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    # "other_package>=version",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/your_username/your_repository_name" # Replace with your project's GitHub URL
"Bug Tracker" = "https://github.com/your_username/your_repository_name/issues" # Replace
